--- a/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 54 B - 6301430.md
+++ b/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 54 B - 6301430.md
@@ -1,207 +1,4 @@
-# Code général des impôts, annexe 4  
-Version Consolidée au 1979-03-11
-## Contenu: 
-  - [Livre premier : Assiette et liquidation de l'impôt (art. 52 à 55 A)](#1)
-    - [Première partie : Impôts d'État (art. 52 à 55 A)](#2)
-      - [Titre III : Contributions indirectes (art. 52 à 55 A)](#3)
-        - [Chapitre premier : Boissons (art. 52 à 55 A)](#4)
-          - [Section I : Alcools (art. 52)](#5)
-            - [I : Production (art. 52)](#6)
-              - [E : Teneur en alcool des produits de parfumerie et de toilette (art. 52)](#7)
-          - [Section I bis : Circulation (art. 54 octies)](#8)
-            - [IV : Utilisation de machines à timbrer (art. 54 octies)](#9)
-              - [B : Machines à timbrer les capsules représentatives des droits indirects sur les spiritueux. (art. 54 octies)](#10)
-          - [Section II : Conditionnement des spiritueux. (art. 55 A)](#11)
-  - [ASSIETTE ET LIQUIDATION DE L'IMPOT (art. 53 à 54 B)](#12)
-    - [IMPOTS D'ETAT (art. 53 à 54 B)](#13)
-      - [CONTRIBUTIONS INDIRECTES (art. 53 à 54 B)](#14)
-        - [BOISSONS (art. 53 à 54 B)](#15)
-          - [ALCOOLS (art. 53)](#16)
-          - [CIRCULATION. (art. 54 B)](#17)
-# Livre premier : Assiette et liquidation de l'impôt<a id=1></a>
-
-## Première partie : Impôts d'État<a id=2></a>
-
-### Titre III : Contributions indirectes<a id=3></a>
-
-#### Chapitre premier : Boissons<a id=4></a>
-
-##### Section I : Alcools<a id=5></a>
-
-##### I : Production<a id=6></a>
-
-##### E : Teneur en alcool des produits de parfumerie et de toilette<a id=7></a>
-
-###### Article 52
-
-Peuvent présenter une richesse alcoolique inférieure à 50 % vol. les produits de parfumerie et de toilette visés à l'article
-349 du code général des impôts compris sous l'une des dénominations génériques suivantes :
-
-Lotions au pétrole ;
-
-Lotions détersives ;
-
-Lotions toniques pour les soins du visage et du corps ;
-
-Teintures ;
-
-Fixateurs pour les cheveux ;
-
-Brillantines deux corps ;
-
-Shampooings ;
-
-Produits de beauté (crèmes laits etc., pour les soins de l'épiderme) ;
-
-Vernis ;
-
-Rouges liquides ;
-
-Dépilatoires ;
-
-Fards ;
-
-Eaux dentifrices ;
-
-Produits de permanente pour cheveux ;
-
-Produits pour l'entretien de la chevelure (l'hygiène et les soins de la chevelure).
-
-**Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Arrêté 1981-09-15
-
-_Modifié par_:
-
-  - Décret n°79-200 1979-03-05 art. 4 JORF 11 mars 1979
-
-_Cité par_:
-
-  - Code général des impôts, CGI. - art. 349 (V)
-
-
-##### Section I bis : Circulation<a id=8></a>
-
-##### IV : Utilisation de machines à timbrer<a id=9></a>
-
-##### B : Machines à timbrer les capsules représentatives des droits indirects sur les spiritueux.<a id=10></a>
-
-###### Article 54 octies
-
-Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions de l'article 54-0 BK, sont destinées à
-l'impression de timbres fiscaux attestant le paiement ou la constatation des droits indirects sur les spiritueux, sur les
-capsules des récipients contenant ces boissons.
-
-Les empreintes fournies par les machines à timbrer doivent mentionner le volume net exprimé en centilitres et le titre
-alcoométrique volumique du liquide renfermé dans les récipients sur lesquels sont apposées les capsules.
-
-Ces empreintes doivent être imprimées sur un fonds de la couleur prévue à l'article 54-0 BG constitué par une surface
-circulaire d'au moins 15 millimètres de diamètre placée au centre de la capsule.
-
-Les impressions doivent être effectuées dans les couleurs prévues au même article.
-
-(1) Voir les conditions générales d'utilisation prescrites par les articles 164 L à 164 AL.
-
-**Liens relatifs à cet article**
-
-_Abrogé par_:
-
-  - Arrêté 2000-09-22 art. 6 JORF 5 octobre 2000
-
-_Cite_:
-
-  - CGIAN4 164 L à 164 AL, 54-0 BK, 54-0 BG
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2001
-
-
-##### Section II : Conditionnement des spiritueux.<a id=11></a>
-
-###### Article 55 A
-
-Indépendamment des nom, raison sociale et adresse du vendeur ou de l'expéditeur, ainsi que de la nature du produit, et sans
-préjudice des autres dispositions en vigueur relatives à l'étiquetage des boissons, et notamment de celles des décrets du 19
-août 1921 et du  0 30 septembre 1949, le titre alcoométrique volumique des spiritueux doit être indiqué d'une manière
-apparente sur les étiquettes et en chiffres d'au moins 5 millimètres de hauteur.
-
-**Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Arrêté 1981-09-15
-  - Arrêté 2000-06-02
-
-_Cite_:
-
-  - Décret n°1921-08-19
-  - Décret n°1949-09-30
-
-_Modifié par_:
-
-  - Décret n°79-200 1979-03-05 art. 3 JORF 11 mars 1979
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2000
-  - PEREMPTION: Loi - art. 18 (V) JORF 31 décembre 1999
-
-
-# ASSIETTE ET LIQUIDATION DE L'IMPOT<a id=12></a>
-
-## IMPOTS D'ETAT<a id=13></a>
-
-### CONTRIBUTIONS INDIRECTES<a id=14></a>
-
-#### BOISSONS<a id=15></a>
-
-##### ALCOOLS<a id=16></a>
-
-###### Article 53
-
-Le droit de fabrication au tarif visé à l'article 406 A-4° du code général des impôts est applicable aux alcools utilisés
-dans la préparation des produits appartenant aux catégories ci-après désignées :
-
-a. Médicaments à base d'alcool définis par l'article L 511 du code de la santé publique  à l'exception des alcools de menthe
-eaux de mélisse  élixirs et produits similaires vendus autrement qu'aux pharmaciens ou médecins dits propharmaciens et en vue
-de la préparation de médicaments;
-
-b. Produits contenant de l'alcool  figurant à la Pharmacopée française  et livrés à des pharmaciens ou médecins dits
-propharmaciens en vue de la préparation de médicaments;
-
-c. Alcoolats  extraits alcooliques parfumés  teintures  produits analogues  livrés à des industriels en vue de la préparation
-de limonades gazeuses  sodas ou sirops  à la condition que la richesse alcoolique des boissons fabriquées ne soit pas
-supérieure à 1 % vol. et que lesdits industriels n'exercent pas le commerce en détail de boissons alcooliques;
-
-d. Alcoolats  extraits alcooliques parfumés non consommables en l'état livrés à des biscuitiers  pâtissiers  confiseurs
-s chocolatiers glaciers pour servir exclusivement à parfumer la pâte des bonbons, gâteaux et glaces ou utilisés dans
-l'industrie de la conserverie l'industrie de la confiturerie ou l'industrie laitière (fabrication de yaourts ou yogourts);
-
-e. Eaux-de-vie et vins de liqueur utilisés  dans les conditions fixées par l'administration  à la préparation de salaisons et
-conserves de viande en boîtes.
-
-**Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Arrêté 1981-09-15
-
-_Cite_:
-
-  - CGI 406 A 4°
-  - Code de la santé publique - art. L511 (M)
-
-_Modifié par_:
-
-  - Décret n°79-200 1979-03-05 art. 4 JORF 11 mars 1979
-
-
-##### CIRCULATION.<a id=17></a>
-
-###### Article 54 B
+# Article 54 B
 
 La fourniture et l'impression des factures-congés incombent aux utilisateurs.
 
@@ -483,5 +280,3 @@ _Cite_:
 _Modifié par_:
 
   - Décret n°79-200 1979-03-05 art. 3 JORF 11 mars 1979
-
-
