--- a/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 109 - 6301532.md
+++ b/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 109 - 6301532.md
@@ -1,21 +1,23 @@
 # Article 109
 
-L'administration peut faire vérifier tant au siège de l'établissement principal que dans les établissements annexes agences
-ou succursales  si elle le juge convenable  l'exactitude des résultats présentés par les états indiqués à l'article 108. A
-cet effet  l'assujetti doit conserver  pendant le délai prévu à l'article 2002 bis du code général des impôts  tous les
-documents de comptabilité et autres nécessaires pour la vérification [*obligation de conservation*].
+Tous les documents de comptabilité et autres nécessaires pour la vérification des états fournis à l'appui du versement des
+droits de timbre doivent être conservés pendant le délai prévu à l'article L. 82 du livre des procédures fiscales.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 1981-09-15
+
 _Cite_:
 
-  - CGI 2002 bis
+  - CGI L82
   - CGIAN4 108
-
-**Liens**:
-
-  - HISTO: EDITION 1979-07-01
 
 _Nouveaux textes_:
 
   - Livre des procédures fiscales A37-1 5°
+
+_Abrogé par_:
+
+  - Loi n°82-1126 du 29 décembre 1982, art. 8 (V)
