--- a/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 121 KM - 6301572.md
+++ b/02. ASSIETTE ET LIQUIDATION DE L'IMPOT/Article 121 KM - 6301572.md
@@ -1,19 +1,21 @@
 # Article 121 KM
 
-Les débitants de tabac perçoivent sur le prix de vente des papiers timbrés et timbres mobiles de toute nature, dont ils
-assurent la débite, une remise calculée au moyen du barème ci-après :
+Les débitants de tabac perçoivent sur le prix de vente des timbres mobiles de toute nature, dont ils assurent la débite, une
+remise calculée au moyen du barème ci-après :
 
-4 % jusqu'à 8.500 F de ventes annuelles;
+4 % jusqu'à 7.000 F de ventes annuelles;
 
-3 % de 8.501 F à 45.000 F de ventes annuelles;
+3 % de 7.001 à 35.000 F de ventes annuelles ;
 
-2 % de 45.001 F à 95.000 F de ventes annuelles;
+2 % de 35.001 à 80.000 F de ventes annuelles ;
 
-1 % au-dessus de 95.000 F de ventes annuelles.
+1 % au-dessus de 80.000 F de ventes annuelles (1).
 
 La remise est liquidée et payée trimestriellement.
 
 Les dispositions du présent article s'appliquent dans les départements de la Corse.
+
+(1) Barème applicable à compter du 1er janvier 1983.
 
 **Liens relatifs à cet article**
 
@@ -22,6 +24,10 @@ _Cité par_:
   - Arrêté du 22 décembre 2014 - art. Annexe 1 (V)
   - Arrêté du 25 juin 2019 (V)
 
+_Codifié par_:
+
+  - Arrêté 1987-11-23
+
 _Modifié par_:
 
-  - Arrêté 1985-02-15 art. 1 JORF 6 mars 1985, en vigueur le 1er janvier 1985
+  - Loi n°86-1318 du 30 décembre 1986 - art. 25 () JORF 31 décembre 1986
