--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 H - 6301246.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 H - 6301246.md
@@ -51,6 +51,14 @@ Fourniture et pose d'échangeurs de chaleur.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 1991-09-09
+
+**Liens**:
+
+  - PEREMPTION: Arrêté 1991-09-09 art. 1 JORF 10 septembre 1991
+
 _Cite_:
 
   - CGI 199 sexies
