--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 I - 6301250.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 I - 6301250.md
@@ -81,6 +81,10 @@ _Cite_:
   - Arrêté 1983-07-05
   - CGI 199 sexies 2° b
 
-_Modifié par_:
+_Codifié par_:
 
-  - Arrêté 1985-07-11 art. 3, art. 4 JORF 4 août 1985
+  - Arrêté 1990-09-10
+
+**Liens**:
+
+  - PEREMPTION: Arrêté 1991-09-09 art. 1 JORF 10 septembre 1991
