--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 022 - 6301265.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 022 - 6301265.md
@@ -1,8 +1,7 @@
 # Article 22
 
-Les sociétés mentionnées au 3 de l'article 206 qui désirent opter à compter d'une année déterminée pour leur assujettissement
-à l'impôt sur les sociétés doivent  pour que cette option soit valable la notifier dans les trois premiers mois de ladite
-année au service des impôts du lieu de leur principal établissement.
+La notification de l'option prévue à l'article 239 du code général des impôts est adressée au service des impôts du lieu du
+principal établissement de la société qui souhaite exercer cette option.
 
 La notification indique la désignation de la société et l'adresse du siège social les nom prénoms et adresse de chacun des
 associés ou participants ainsi que la répartition du capital social entre ces derniers. Elle est signée par tous les associés
@@ -29,12 +28,12 @@ sociétés.
 
 _Codifié par_:
 
-  - Arrêté 1986-10-07
+  - Arrêté 1991-09-09
 
 _Cite_:
 
-  - CGI 206 3
+  - CGI 239
 
 _Modifié par_:
 
-  - Loi n°85-1403 du 30 décembre 1985 - art. 5 (P) JORF 31 décembre 1985
+  - Loi n°90-1169 du 29 décembre 1990 - art. 31 () JORF 30 décembre 1990
