--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AO - 6301800.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AO - 6301800.md
@@ -1,6 +1,6 @@
 # Article 159 AO
 
-A compter du 1er janvier 1990, le montant de la taxe prévue à l'article 363 D de l'annexe II au code général des impôts est
+A compter du 1er janvier 1991, le montant de la taxe prévue à l'article 363 D de l'annexe II au code général des impôts est
 fixé comme suit par kilogramme net :
 
 " Viande de boeuf et viande de veau : 0,034 F ;
@@ -17,12 +17,20 @@ fixé comme suit par kilogramme net :
 
 _Modifié par_:
 
-  - Arrêté 1989-12-14 art. 1 JORF 22 décembre 1989
+  - Arrêté 1990-12-27 art. 1 JORF 1er janvier 1991
 
 _Codifié par_:
 
-  - Arrêté 1990-09-10
+  - Arrêté 1991-09-09
 
 _Cite_:
 
   - CGIAN2 363 D
+
+_Nouveaux textes_:
+
+  - CGIAN4 159 AL quater-0A
+
+_Transféré par_:
+
+  - Décret n°91-470 du 14 mai 1991 - art. 1 (V) JORF 17 mai 1991
