--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 022 - 6301265.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 022 - 6301265.md
@@ -4,8 +4,8 @@ La notification de l'option prévue à l'article 239 du code général des impô
 principal établissement de la société qui souhaite exercer cette option.
 
 La notification indique la désignation de la société et l'adresse du siège social les nom prénoms et adresse de chacun des
-associés ou participants ainsi que la répartition du capital social entre ces derniers. Elle est signée par tous les associés
-ou participants. Il en est délivré récépissé.
+associés ou participants ainsi que la répartition du capital social entre ces derniers. Elle est signée dans les conditions
+prévues par les statuts ou, à défaut, par tous les associés ou participants. Il en est délivré récépissé.
 
 L'option ainsi exercée est irrévocable.
 
@@ -16,7 +16,7 @@ déclaration de résultats avant la date d'ouverture du premier exercice auquel 
 
 Pour les exercices ou périodes d'imposition ouverts en 1981, la renonciation peut être effectuée jusqu'à la date d'expiration
 du délai de déclaration des résultats de ces exercices ou périodes d'imposition et, si ce délai expire après le 31 décembre
-1981 , au plus tard jusqu'à cette date.
+1981, au plus tard jusqu'à cette date.
 
 La renonciation à l'option est effectuée selon les modalités prévues au deuxième alinéa du présent article. Elle précise les
 liens de parenté entre les associés.
@@ -26,14 +26,14 @@ sociétés.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Arrêté 1991-09-09
+  - Arrêté 1992-12-28 art. 1 JORF 5 janvier 1993
 
 _Cite_:
 
   - CGI 239
 
-_Modifié par_:
+**Liens**:
 
-  - Loi n°90-1169 du 29 décembre 1990 - art. 31 () JORF 30 décembre 1990
+  - HISTO: Edition du 18 août 1993
