--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 - 6301020.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 - 6301020.md
@@ -1,9 +1,17 @@
 # Article 164
 
-Les frais d'assiette et de perception établis au profit du service des impôts  sur les bases indiquées à l'article 162, sont
-payés en une seule fois pour l'année entière dès le début de l'année suivante.
+Les frais d'assiette et de perception établis au profit du service des douanes et droits indirects sur les bases indiquées à
+l'article 162, sont payés en une seule fois pour l'année entière dès le début de l'année suivante.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Arrêté 1993-01-04 art. 11 JORF 5 janvier 1993
+
+_Codifié par_:
+
+  - Arrêté 2003-03-31
 
 _Cite_:
 
@@ -11,4 +19,6 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: EDITION 1979-07-01
+  - HISTO: Edition du 18 août 1993
+  - HISTO: Edition du 1er janvier 2003
+  - PEREMPTION: Loi - art. 27 (V) JORF 31 décembre 2002
