--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 54 A - 6301425.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 54 A - 6301425.md
@@ -1,17 +1,17 @@
 # Article 54 A
 
 Les marchands en gros de boissons, les distillateurs de profession, les viticulteurs, les bouilleurs de cru, les coopératives
-et les débitants de boissons peuvent être autorisés par le directeur des services fiscaux à utiliser les factures qui
-tiennent lieu de titre de mouvement et qui sont mentionnées à l'article 445 A du code général des impôts.
+et les débitants de boissons peuvent être autorisés par le directeur régional des douanes et droits indirects à utiliser les
+factures qui tiennent lieu de titre de mouvement et qui sont mentionnées à l'article 445 A du code général des impôts.
 
-Une caution spéciale garantit le paiement des droits applicables aux produits enlevés ; elle doit être présentée et agréée
-par l'administration.
+Une caution spéciale garantit le paiement des droits applicables aux produits enlevés; elle doit être présentée et agréée par
+l'administration.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Arrêté 1986-10-07
+  - Arrêté 1993-01-04 art. 5 JORF 5 janvier 1993
 
 _Cite_:
 
@@ -23,6 +23,6 @@ _Cité par_:
   - Code général des impôts, annexe 4, CGIAN4. - art. 164 AD bis (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 164 AU (V)
 
-_Modifié par_:
+**Liens**:
 
-  - arrêté 1986-03-03 art. 1 JORF 12 mars 1986
+  - HISTO: Edition du 18 août 1993
