--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 54 E - 6301440.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 54 E - 6301440.md
@@ -1,19 +1,19 @@
 # Article 54 E
 
-Le directeur des services fiscaux peut autoriser l'emploi d'empreintes fiscales imprimées par les machines à timbrer au lieu
-des vignettes. Les empreintes doivent comporter les mentions requises aux articles 54 decies et 54 duodecies.
+Le directeur régional des douanes et droits indirects peut autoriser l'emploi d'empreintes fiscales imprimées par les
+machines à timbrer au lieu des vignettes. Les empreintes doivent comporter les mentions requises aux articles 54 decies et 54
+duodecies.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Abrogé par_:
 
-  - Arrêté 1986-10-07
+  - Arrêté 2000-09-22 art. 6 JORF 5 octobre 2000
 
 _Cite_:
 
-  - CGI 54 decies
-  - CGI 54 duodecies
+  - CGI 54 decies, 54 duodecies
 
-_Modifié par_:
+**Liens**:
 
-  - arrêté 1986-03-03 art. 5 JORF 12 mars 1986
+  - HISTO: Edition du 31 mars 2001
