--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 047 - 6300394.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 047 - 6300394.md
@@ -1,14 +1,26 @@
 # Article 47
 
-Les redevables qui sollicitent le remboursement de l'impôt déductible dans les conditions prévues à l'article 271-4 du code
-général des impôts doivent en faire la demande sur un imprimé remis par l'administration.
+Les redevables qui sollicitent le remboursement de l'impôt déductible dans les conditions prévues au V de l'article 271 du
+code général des impôts doivent en faire la demande sur un imprimé remis par l'administration.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 1993-09-24
+
+_Modifié par_:
+
+  - Loi n°93-859 1993-06-22 art. 2 I 2 et IV Finances rectificative pour 1993 JORF 23 juin 1993
+
+_Abrogé par_:
+
+  - Arrêté du 12 juillet 2010 - art. 1
+
 _Cite_:
 
-  - CGI 271 4
+  - CGI 271
 
 **Liens**:
 
-  - HISTO: EDITION 1979-07-01
+  - HISTO: Edition du 18 août 1993
