--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 U - 6301068.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 U - 6301068.md
@@ -1,11 +1,20 @@
 # Article 164 U
 
 Le concessionnaire est tenu de satisfaire à toutes les demandes de location de machines formulées par les usagers de la
-France métropolitaine dûment autorisés par le service des impôts à utiliser ces appareils.
+France métropolitaine dûment autorisés à utiliser ces appareils par le service des impôts ou par le service des douanes et
+droits indirects, pour ce qui le concerne.
 
-Aucune remise ou indemnité n'est allouée par l'administration des impôts au concessionnaire.
+Aucune remise ou indemnité n'est allouée par l'administration au concessionnaire.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Arrêté 1993-01-04 art. 20 JORF 5 janvier 1993
+
+_Codifié par_:
+
+  - Arrêté 1993-09-24
 
 _Cité par_:
 
@@ -13,4 +22,4 @@ _Cité par_:
 
 **Liens**:
 
-  - HISTO: EDITION 1979-07-01
+  - HISTO: Edition du 18 août 1993
