--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AA - 6300954.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AA - 6300954.md
@@ -1,15 +1,24 @@
 # Article 159 AA
 
-Tout éditeur désirant bénéficier de l'exonération prévue à l'article 1609 decies B du code général des impôts doit adresser
+Tout éditeur désirant bénéficier de l'exonération prévue à l'article 1609 duodecies  du code général des impôts doit adresser
 au fonds national du livre pour chaque ouvrage une demande en double exemplaire comportant tous renseignements sur la nature
 le contenu et les caractéristiques de la publication et accompagnée le cas échéant d'un exemplaire de l'ouvrage.
 
+**Nota:**
+
+En conséquence de la loi n° 2018-1317 du 28 décembre 2018, art. 26-III-25°, cet article devient sans objet.
+
 **Liens relatifs à cet article**
 
-_Cite_:
+_Codifié par_:
 
-  - CGI 1609 decies B
+  - Arrêté 1993-09-24
+
+_Modifié par_:
+
+  - Arrêté 1993-09-24 art. 1 JORF 28 septembre 1993
+  - Arrêté du 6 juin 2019 - art. 1
 
 **Liens**:
 
-  - HISTO: EDITION 1979-07-01
+  - PERIME: Arrêté du 6 juin 2019 - art. 1
