--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 AK - 6301108.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 AK - 6301108.md
@@ -1,10 +1,14 @@
 # Article 164 AK
 
-L'administration des impôts n'encourt aucune responsabilité en raison du non-fonctionnement ou du fonctionnement défectueux
-des machines louées par les concessionnaires.
+L'administration n'encourt aucune responsabilité en raison du non-fonctionnement ou du fonctionnement défectueux des machines
+louées par les concessionnaires.
 
 **Liens relatifs à cet article**
 
-**Liens**:
+_Modifié par_:
 
-  - HISTO: EDITION 1979-07-01
+  - Arrêté 1993-01-04 art. 20 JORF 5 janvier 1993
+
+_Codifié par_:
+
+  - Arrêté 1993-09-24
