--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AA - 6300954.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AA - 6300954.md
@@ -1,16 +1,19 @@
 # Article 159 AA
 
-Tout éditeur désirant bénéficier de l'exonération [*condition*] prévue à l'article 1609 decies B du code général des impôts
-doit adresser au fonds national du livre pour chaque ouvrage une demande en double exemplaire comportant tous renseignements
-sur la nature le contenu et les caractéristiques de la publication et accompagnée le cas échéant d'un exemplaire de
-l'ouvrage.
+Tout éditeur désirant bénéficier de l'exonération prévue à l'article 1609 duodecies du code général des impôts doit adresser
+au fonds national du livre pour chaque ouvrage une demande en double exemplaire comportant tous renseignements sur la nature
+le contenu et les caractéristiques de la publication et accompagnée le cas échéant d'un exemplaire de l'ouvrage.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 1993-09-24
+
+_Modifié par_:
+
+  - Arrêté 1993-09-24 art. 1 JORF 28 septembre 1993
+
 _Cite_:
 
-  - CGI 1609 decies B
-
-**Liens**:
-
-  - HISTO: EDITION 1979-07-01
+  - Code général des impôts, CGI. - art. 1609 duodecies (V)
