--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 23 N - 6302076.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 23 N - 6302076.md
@@ -1,17 +1,22 @@
 # Article 23 N
 
-La limite visée au premier alinéa du 8° de l'article 257 du code général des impôts est fixée à 200 F toutes taxes comprises.
+La limite visée au a du 1 du deuxième alinéa du 8° de l'article 257 du code général des impôts est fixée à 200 F toutes taxes
+comprises.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
-
-  - Arrêté 1993-01-26 art. 1 JORF 3 février 1993
-
 _Codifié par_:
 
-  - Arrêté 1993-09-24
+  - Arrêté 1994-10-17
 
 _Cite_:
 
   - CGI 257
+
+**Liens**:
+
+  - HISTO: Edition du 2 septembre 1994
+
+_Modifié par_:
+
+  - Loi n°93-1353 du 30 décembre 1993 - art. 17 () JORF 31 décembre 1993
