--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
@@ -1,33 +1,37 @@
 # Article 71
 
-Est autorisée l'utilisation des machines à timbrer qui  suivant les prévisions des articles 301, 304, 313 AA et 313 AR de
-l'annexe III du code général des impôts  sont destinées respectivement au timbrage :
+Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions des articles 301, 304, 313 AA, 313 AR et 313
+BR bis de l'annexe III au code général des impôts, sont destinées respectivement au timbrage :
 
-des actes soumis au timbre de dimension;
+a) Des actes soumis au timbre de dimension ;
 
-des effets de commerce;
+b) Des effets de commerce ;
 
-des lettres de voiture ou titres assimilés;
+c) Des lettres de voiture ou titres assimilés ;
 
-des cartes d'entrée dans les casinos.
+d) Des cartes d'entrée dans les casinos ;
 
-(1) VOIR LES CONDITIONS GENERALES D'UTILISATION PRESCRITES PAR LES ARTICLES 164 L A 164 AL.
+e) Des requêtes.
 
 **Liens relatifs à cet article**
 
+_Modifié par_:
+
+  - Arrêté 1995-02-21 art. 1 JORF 1er mars 1995
+
 _Codifié par_:
 
-  - Arrêté 1983-10-06
+  - Arrêté 1995-12-11
 
 _Cite_:
 
-  - CGIAN3 301, 304, 313 AA, 313 AR
-
-_Modifié par_:
-
-  - Loi n°82-1126 du 29 décembre 1982 - art. 8 (P) JORF JORF 30 décembre 1982
+  - CGIAN3 301, 304, 313 AA, 313 AR, 313 BR bis
 
 _Cité par_:
 
   - Code général des impôts, annexe 3, CGIAN3. - art. 405 B (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 164 M (V)
+
+**Liens**:
+
+  - HISTO: Edition du 27 octobre 1995
