--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
@@ -1,11 +1,11 @@
 # Article 71
 
-Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions des articles 301, 304, 313 AA, 313 AR et 313
-BR bis de l'annexe III au code général des impôts, sont destinées respectivement au timbrage :
+Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions des articles ((301, 313 AA, 313 AR et 313 BR
+bis de l'annexe III au code général des impôts, sont destinées respectivement au timbrage)) (M) :
 
 a) Des actes soumis au timbre de dimension ;
 
-b) Des effets de commerce ;
+b) (Sans objet) (M) ;
 
 c) Des lettres de voiture ou titres assimilés ;
 
@@ -13,19 +13,17 @@ d) Des cartes d'entrée dans les casinos ;
 
 e) Des requêtes.
 
+(M) Modification.
+
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Arrêté 1995-02-21 art. 1 JORF 1er mars 1995
 
 _Codifié par_:
 
-  - Arrêté 1995-12-11
+  - Arrêté 1997-05-28
 
 _Cite_:
 
-  - CGIAN3 301, 304, 313 AA, 313 AR, 313 BR bis
+  - CGIAN3 301, 313 AA, 313 AR, 313 BR bis
 
 _Cité par_:
 
@@ -34,4 +32,8 @@ _Cité par_:
 
 **Liens**:
 
-  - HISTO: Edition du 27 octobre 1995
+  - HISTO: Edition du 11 avril 1997
+
+_Modifié par_:
+
+  - Loi n°96-1181 du 30 décembre 1996 - art. 38 () JORF 31 décembre 1996
