--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AG - 6302097.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AG - 6302097.md
@@ -1,17 +1,19 @@
 # Article 159 AG
 
 Le taux de la contribution à la charge des établissements de transfusion sanguine prévue à l'article 1609 tervicies du code
-général des impôts est fixé à 5 % du montant hors taxes des cessions en France de produits sanguins labiles.
+général des impôts est fixé ((à 4 %)) (M) du montant hors taxes des cession en France de produits sanguins labiles.
+
+(M) Modification.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1994-01-28 art. 1 JORF 29 janvier 1994
+  - Arrêté 1996-03-27 art. 1, art. 2 JORF 3 avril 1996, en vigueur le 1er avril 1996
 
 _Codifié par_:
 
-  - Arrêté 1994-10-17
+  - Arrêté 1997-05-28
 
 _Cite_:
 
@@ -19,4 +21,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 2 septembre 1994
+  - HISTO: Edition du 11 avril 1997
