--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AR - 6300983.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AR - 6300983.md
@@ -1,25 +1,25 @@
 # Article 159 AR
 
 Le montant de la taxe parafiscale perçue sur les graines oléagineuses, visée à l'article 363 F de l'annexe II au code général
-des impôts destinée au Fonds national du développement agricole est fixé comme suit pour la campagne 1995-1996 :
+des impôts destinée au Fonds national du développement agricole est fixé comme suit pour la campagne 1996-1997 :
 
-Colza : 2,45 F par tonne ;
+Colza : 2,89 F par tonne ;
 
-Navette : 2,45 F par tonne ;
+Navette : 2,89 F par tonne ;
 
-Tournesol : 3 F par tonne ;
+Tournesol : 3,54 F par tonne ;
 
-Soja : 1,60 F par tonne.
+Soja : 1,89 F par tonne.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1995-09-22 art. 1 JORF 24 septembre 1995
+  - Arrêté 1996-10-14 art. 1 JORF 24 octobre 1996
 
 _Codifié par_:
 
-  - Arrêté 1995-12-11
+  - Arrêté 1997-05-28
 
 _Cite_:
 
@@ -27,4 +27,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 27 octobre 1995
+  - HISTO: Edition du 11 avril 1997
