--- a/03. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
+++ b/03. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
@@ -1,13 +1,13 @@
 # Article 188 C
 
 Les personnes morales visées à l'article 108 du code général des impôts versent l'impôt afférent aux intérêts de bons de
-caisse à la recette des impôts dont elles dépendent pour le paiement de la retenue à la source sur le revenu des capitaux
-mobiliers.
-
-En ce qui concerne les personnes physiques et les personnes morales autres que celles désignées ci-dessus, l'impôt est versé
-à la recette des impôts du siège de la direction des entreprises  ou à défaut  du lieu du principal établissement.
+caisse à la recette des impôts de la direction des services généraux et de l'informatique.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Arrêté 1997-05-31 art. 1 JORF 1er juin 1997
 
 _Cite_:
 
@@ -15,4 +15,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: EDITION 1979-07-01
+  - HISTO: Edition du 22 avril 1998
