--- a/03. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
+++ b/03. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
@@ -3,14 +3,14 @@
 Le prélèvement opéré par les agences et succursales des établissements de crédit par les caisses publiques et par les caisses
 d'épargne peut faire l'objet de versements globaux dans les conditions prévues à l'article 188 H.
 
-La déclaration préalable qui doit être adressée à la direction des services fiscaux de la résidence de l'organisme
-centralisateur peut viser à la fois le versement de la retenue à la source prévue audit article et celui du prélèvement.
+La déclaration préalable qui doit être adressée à la direction des services généraux et de l'informatique peut viser à la
+fois le versement de la retenue à la source prévue audit article et celui du prélèvement.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Arrêté 1984-10-01
+  - Arrêté 1997-05-31 art. 1 JORF 1er juin 1997
 
 _Cite_:
 
@@ -22,8 +22,4 @@ _Cité par_:
 
 **Liens**:
 
-  - HISTO: Edition du 20 juillet 1984
-
-_Modifié par_:
-
-  - Loi n°84-46 1984-01-24 art. 94 II JORF 25 janvier 1984
+  - HISTO: Edition du 22 avril 1998
