--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AS - 6300997.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AS - 6300997.md
@@ -1,7 +1,7 @@
 # Article 159 AS
 
 En application de l'article 363 FA de l'annexe II, le montant de la taxe parafiscale perçue sur les céréales au profit de
-l'Association nationale pour le développement agricole est fixé comme suit, pour la campagne 1997-1998 :
+l'Association nationale pour le développement agricole est fixé comme suit, pour la campagne 1998-1999 :
 
 a. Blé tendre : 3,10 F par tonne ;
 
@@ -23,13 +23,13 @@ i. Triticale : 1,65 F par tonne.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté 1997-10-28 art. 1 JORF 29 octobre 1997
+  - Arrêté 1998-07-02 art. 1 JORF 17 juillet 1998
 
 _Codifié par_:
 
-  - Arrêté 1998-05-22
+  - Arrêté 1999-05-18
 
 _Cite_:
 
@@ -37,4 +37,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 22 avril 1998
+  - HISTO: Edition du 31 mars 1999
