--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 F - 6300451.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 50-0 F - 6300451.md
@@ -1,17 +1,14 @@
 # Article 50-0 F
 
-Les caractéristiques et obligations prévues aux articles 54-0 F, 54-0 G, 54-0 X, 54-0 AA et 54-0 AC relatives aux marchands
-en gros et négociants sont applicables aux entrepositaires agréés d'autres Etats membres de la Communauté européenne."
+Les caractéristiques et obligations prévues aux articles 54-0 F, 54-0 G, 54-0 X, 54-0 AA et 54-0 AC relatives aux
+entrepositaires agréés et négociants sont applicables aux entrepositaires agréés d'autres Etats membres de la Communauté
+européenne.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
-
-  - Arrêté 1998-07-09 art. 4 JORF 11 juillet 1998
-
 _Codifié par_:
 
-  - Arrêté 1999-05-18
+  - Arrêté 2000-06-02
 
 _Cite_:
 
@@ -19,4 +16,8 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 31 mars 1999
+  - HISTO: Edition du 31 mars 2000
+
+_Modifié par_:
+
+  - Loi - art. 18 (V) JORF 31 décembre 1999
