--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 A - 6300478.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 A - 6300478.md
@@ -4,17 +4,28 @@ Les dispositions de l'article 444 du code général des impôts relatives à l'a
 représentatives des droits indirects sont rendues applicables aux vins  aux cidres et aux spiritueux dans les conditions
 précisées aux articles 54-0 B à 54-0 CD.
 
-L'apposition de ces capsules se substitue aux titres de mouvement visés aux b et c de l'article 445 du code précité.
+L'apposition de ces capsules se substitue au document mentionné au II de l'article 302 M du code précité.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 2000-06-02
+
 _Cite_:
 
-  - CGI 444
-  - CGI 445 b, c
-  - CGIAN4 54-0 B A CGIAN4 54-0 CD
+  - CGI 444, 302 M
+  - CGIAN4 54-0 B à 54-0 CD
+
+_Modifié par_:
+
+  - Loi - art. 18 (V) JORF 31 décembre 1999
 
 _Cité par_:
 
   - Code général des impôts, annexe 4, CGIAN4. - art. 50-0 F (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 B (V)
+
+**Liens**:
+
+  - HISTO: Edition du 31 mars 2000
