--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 BJ - 6300725.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 BJ - 6300725.md
@@ -1,14 +1,14 @@
 # Article 54-0 BJ
 
-Les marchands en gros de boissons bénéficiant du crédit d'enlèvement de un mois ou du crédit mensuel de liquidation peuvent
-être admis par le directeur régional des douanes et droits indirects à utiliser les capsules prévues par l'article 444 du
-code général des impôts.
+Les entrepositaires agréés de boissons bénéficiant du crédit d'enlèvement de un mois ou du crédit mensuel de liquidation
+peuvent être admis par le directeur régional des douanes et droits indirects à utiliser les capsules prévues par l'article
+444 du code général des impôts.
 
 **Liens relatifs à cet article**
 
-_Modifié par_:
+_Abrogé par_:
 
-  - Arrêté 1993-01-04 art. 5 JORF 5 janvier 1993
+  - Arrêté 2000-09-22 art. 13 JORF 5 octobre 2000
 
 _Cite_:
 
@@ -16,4 +16,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 18 août 1993
+  - HISTO: Edition du 31 mars 2001
