--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 Z - 6300522.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 54-0 Z - 6300522.md
@@ -3,17 +3,25 @@
 En aucun cas, il ne peut être fait remise des droits et taxes représentés par les timbres imprimés sur les feuilles
 métalliques ou sur les capsules perdues, volées, détruites ou détériorées.
 
-Seules peuvent être autorisées la restitution ou la remise des droits et taxes afférents aux bouteilles défectueuses
-couleuses ou cassées; cette restitution ou cette remise ne peuvent avoir lieu que sur présentation  par le marchand en gros
-des bouteilles ou goulots revêtus de capsules intactes. Après vérification  les capsules correspondantes doivent être
+Seules peuvent être autorisées la restitution ou la remise des droits et taxes afférents aux bouteilles défectueuses,
+couleuses ou cassées ; cette restitution ou cette remise ne peuvent avoir lieu que sur présentation, par l'entrepositaire
+agréé, des bouteilles ou goulots revêtus de capsules intactes. Après vérification, les capsules correspondantes doivent être
 immédiatement détruites par le service.
 
 **Liens relatifs à cet article**
 
-**Liens**:
+_Codifié par_:
 
-  - TXT_ASSOCIE: Décret n°97-1195 1997-12-24 art. 6
+  - Arrêté 2000-06-02
 
 _Cité par_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 289 (V)
+
+**Liens**:
+
+  - HISTO: Edition du 31 mars 2000
+
+_Modifié par_:
+
+  - Loi - art. 18 (V) JORF 31 décembre 1999
