--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 005 - 6300237.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 005 - 6300237.md
@@ -28,8 +28,8 @@ Chauffeurs et receveurs convoyeurs de cars à services réguliers ou occasionnel
 convoyeurs des entreprises de construction d'automobiles. Chauffeurs et convoyeurs de transports rapides routiers ou
 d'entreprises de déménagements par automobiles : 20 %.
 
-((Commis des prestataires de services d'investissement qui étaient agréés au 31 décembre 1995 en tant que sociétés de
-bourse)) (M) place de Paris. Sur les émoluments variables de toute nature : 20 %.
+Commis des prestataires de services d'investissement qui étaient agréés au 31 décembre 1995 en tant que sociétés de bourse
+place de Paris. Sur les émoluments variables de toute nature : 20 %.
 
 En ce qui concerne les émoluments fixes, la seule déduction applicable est la déduction normale de 10 %.
 
@@ -38,8 +38,6 @@ Couture (personnel des grandes maisons parisiennes de) :
 Modélistes : 20 %.
 
 Mannequins : 10 %.
-
-Fonctionnaires ou agents des assemblées parlementaires : 20 %.
 
 Inspecteurs d'assurances des branches vie, capitalisation et épargne : 30 %.
 
@@ -97,7 +95,9 @@ Emouleurs, polisseurs et trempeurs : 15 %.
 
 . Galoches de la région de Laventie (Pas-de-Calais) :
 
-Piqueurs non propriétaires de leurs machines, monteurs : 10 %.
+Piqueurs non propriétaires de leurs machines, monteurs :
+
+10 %.
 
 Piqueurs propriétaires de leurs machines : 15 %.
 
@@ -228,19 +228,22 @@ Voyageurs, représentants et placiers de commerce ou d'industrie :
 
 30 %.
 
-(M) Modification.
-
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1996-07-30 art. 1 JORF 2 août 1996
-  - Loi n°96-597 du 2 juillet 1996 - art. 94 (V) JORF 4 juillet 1996
+  - Arrêté 1999-03-15 art. 1 JORF 30 juin 1999
+
+_Codifié par_:
+
+  - Arrêté 2002-06-06
+
+**Liens**:
+
+  - PEREMPTION: Loi - art. 10 (V) JORF 31 décembre 1997
+  - HISTO: Edition du 31 mars 2000
+  - HISTO: Edition du 31 mars 2002
 
 _Cite_:
 
   - Décret n°1936-11-17 art. 1
-
-**Liens**:
-
-  - HISTO: Edition du 11 avril 1997
