--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 30-0 C - 6300343.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 30-0 C - 6300343.md
@@ -1,6 +1,6 @@
 # Article 30-0 C
 
-Les ascenseurs et matériels assimilés soumis au taux réduit de la taxe sur la valeur ajoutée en application du troisième
+Les ascenseurs et matériels assimilés soumis au taux réduit de la taxe sur la valeur ajoutée en application du cinquième
 alinéa de l'article 278 quinquies du code général des impôts sont les matériels suivants, spécialement conçus pour le
 déplacement d'une personne handicapée :
 
@@ -36,24 +36,22 @@ f) Leur charge nominale n'excède pas 200 kilogrammes.
 
 **Liens relatifs à cet article**
 
-_Modifié par_:
-
-  - Arrêté 1998-06-15 art. 1 JORF 24 juin 1998
-  - Loi - art. 30 () JORF 31 décembre 1998
-
 _Codifié par_:
 
-  - Arrêté 1999-05-18
+  - Arrêté 2002-06-06
+
+_Modifié par_:
+
+  - Arrêté 2002-06-06 art. 2 JORF 8 juin 2002
 
 _Cite_:
 
   - CGI 278 quinquies
 
-**Liens**:
-
-  - HISTO: Edition du 31 mars 1999
-  - TXT_ASSOCIE: Instruction 1999-02-08 3C-2-99
-
 _Cité par_:
 
   - Code général des impôts, annexe 4, CGIAN4. - art. 18 ter (M)
+
+**Liens**:
+
+  - HISTO: Edition du 31 mars 2002
