--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AQ - 6301483.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AQ - 6301483.md
@@ -5,7 +5,10 @@ indications suivantes ;
 
 1. appellation du produit telle qu'elle figure dans l'arrêté fixant son prix de vente au détail ;
 
-2. pays de fabrication ;
+a) Pays de fabrication, pour les produits fabriqués dans un pays tiers ;
+
+b) Pays de fabrication, ou mention : " fabriqué en Union européenne ", ou mention : " fabriqué en UE ", pour les produits
+fabriqués dans un Etat membre de l'Union ;
 
 3. désignation du fournisseur ;
 
@@ -22,19 +25,17 @@ d. (disposition devenue sans objet).
 
 e. exportation ou la désignation du pays de destination pour les produits destinés à l'exportation.
 
+6. Le numéro du lot ou un équivalent permettant d'identifier le lieu et le moment de la fabrication.
+
 **Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Arrêté 1987-11-23
-
-**Liens**:
-
-  - HISTO: Edition du 10 août 1987
 
 _Modifié par_:
 
-  - Loi n°86-1317 du 30 décembre 1986 - art. 32 (P) JORF 31 décembre 1986
+  - Arrêté 2002-06-11 art. 1, art. 2 JORF 15 juin 2002
+
+_Codifié par_:
+
+  - Arrêté 2003-03-31
 
 _Cité par_:
 
