--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 071 - 6301491.md
@@ -1,7 +1,7 @@
 # Article 71
 
-Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions des articles 301, 313 AR et 313 BR bis de
-l'annexe III au code général des impôts, sont destinées respectivement au timbrage :
+Est autorisée l'utilisation des machines à timbrer qui, suivant les prévisions des articles 301 et 313 AR de l'annexe III au
+code général des impôts, sont destinées respectivement au timbrage :
 
 a) Des actes soumis au timbre de dimension ;
 
@@ -17,21 +17,22 @@ e) Des requêtes.
 
 _Codifié par_:
 
-  - Arrêté 2000-06-02
+  - Arrêté 2004-03-26
 
 _Cite_:
 
-  - CGIAN3 301, 313 AR, 313 BR bis
+  - CGIAN3 301, 313 AR
+
+**Liens**:
+
+  - HISTO: Edition du 1er janvier 2004
+
+_Modifié par_:
+
+  - Ordonnance 2003-1235 2003-12-22 art. 2 I, IV JORF 24 décembre 2003
+  - Ordonnance n°2003-1235 du 22 décembre 2003 - art. 2 (V) JORF 24 décembre 2003
 
 _Cité par_:
 
   - Code général des impôts, annexe 3, CGIAN3. - art. 405 B (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 164 M (V)
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2000
-
-_Modifié par_:
-
-  - Loi n°98-546 du 2 juillet 1998 - art. 87 (V) JORF 3 juillet 1998
