--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 AX - 6301128.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 164 AX - 6301128.md
@@ -1,20 +1,16 @@
 # Article 164 AX
 
 Les matériels ou logiciels agréés avant la date de publication de l'arrêté du 22 septembre 2000 (JO du 5 octobre 2000), en
-application des dispositions des articles 164 L à 164 AL, sont remplacés par les matériels mentionnés au I de l'article 164
-AM, au fur et à mesure de leur installation, et au plus tard le 31 décembre 2003.
+application des dispositions des articles 164 L à 164 AL, peuvent être remplacés par les matériels mentionnés au I de
+l'article 164 AM.
 
 **Liens relatifs à cet article**
 
+_Modifié par_:
+
+  - Arrêté 2004-01-13 art. 7 JORF 17 janvier 2004
+
 _Cite_:
 
-  - Arrêté 2000-09-22
-  - CGIAN4 164 L à 164 AL, 164 AM
-
-_Créé par_:
-
-  - Arrêté 2000-09-22 art. 5 JORF 5 octobre 2000
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2001
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AM (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 L (V)
