--- a/03. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
+++ b/03. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
@@ -1,13 +1,17 @@
 # Article 188-0 I
 
 Le prélèvement sur les produits de placements à revenu fixe prévu à l'article 125 A du code général des impôts est versé à la
-recette des impôts de la direction des services généraux et de l'informatique.
+recette des impôts de la direction des résidents à l'étranger et des services généraux.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté 1997-05-31 art. 1 JORF 1er juin 1997
+  - Arrêté 2000-07-24 art. 10 JORF 25 juillet 2000
+
+_Codifié par_:
+
+  - Arrêté 2005-04-06
 
 _Cite_:
 
@@ -15,4 +19,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 22 avril 1998
+  - HISTO: Edition du 1er janvier 2005
