--- a/03. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
+++ b/03. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
@@ -1,10 +1,10 @@
 # Article 188-0 I
 
-I.-Le prélèvement sur les produits de placements à revenu fixe prévu à l'article 125 A du code général des impôts est versé à
-la recette des impôts de la direction des résidents à l'étranger et des services généraux, lorsqu'il est dû à raison de
-revenus, produits et gains mentionnées aux articles 125-0 A et 125 A du code précité.
+I. – Le prélèvement sur les produits de placements à revenu fixe prévu à l'article 125 A du code général des impôts est versé
+à la recette des impôts de la direction des résidents à l'étranger et des services généraux, lorsqu'il est dû à raison de
+revenus, produits et gains mentionnés aux articles 125-0 A et 125 A du code précité.
 
-II.-Le prélèvement mentionné au I dû à raison des revenus, produits et gains visés aux I et II de l'article 125 D du code
+II. – Le prélèvement mentionné au I dû à raison des revenus, produits et gains visés aux I et II de l'article 125 D du code
 général des impôts est versé :
 
 1° A la recette des impôts des non-résidents de la direction des résidents à l'étranger et des services généraux, lorsqu'il
@@ -15,10 +15,16 @@ par le contribuable ;
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 2007-03-30
+
 _Modifié par_:
 
-  - Arrêté 2006-04-14 art. 1 JORF 16 avril 2006
+  - Arrêté 2007-03-30 art. 1 JORF 31 mars 2007
 
 _Cite_:
 
-  - CGI 125 A, 125-0 A, 125 D
+  - Code général des impôts, CGI. - art. 125 A (V)
+  - Code général des impôts, CGI. - art. 125 D (V)
+  - Code général des impôts, CGI. - art. 125-0 A (V)
