--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 170 - 6301918.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 170 - 6301918.md
@@ -36,7 +36,7 @@ l'office national des anciens combattants et victimes de guerre ;
 
 voies navigables de France ;
 
-l'office national interprofessionnel des céréales ;
+l'Office national interprofessionnel des grandes cultures ;
 
 les offices publics d'habitations à loyer modéré ;
 
@@ -46,16 +46,12 @@ les régies municipales, intercommunales et départementales exploitant des serv
 
 _Codifié par_:
 
-  - Arrêté 2006-03-24
-
-_Modifié par_:
-
-  - Arrêté 2006-03-24 art. 1 JORF 26 mars 2006
-
-_Cite_:
-
-  - CGI 1040 I
+  - Arrêté 2007-03-30
 
 **Liens**:
 
-  - HISTO: Edition du 1er janvier 2006
+  - HISTO: Edition du 1er janvier 2007
+
+_Modifié par_:
+
+  - Loi n°2006-11 du 5 janvier 2006 - art. 95 (V) JORF 6 janvier 2006
