--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AD - 6301753.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 AD - 6301753.md
@@ -1,6 +1,6 @@
 # Article 159 AD
 
-Sont soumis à la redevance sur l'emploi de la reprographie les appareils mentionnés ci-après :
+Sont soumis à la taxe prévue à l'article 1609 terdecies du code général des impôts les appareils mentionnés ci-après :
 
 Machines à imprimer offset de 500 kilogrammes ou moins ;
 
@@ -8,18 +8,25 @@ Duplicateurs ;
 
 Appareils de photocopie à système optique ou par contact et appareils de thermocopie ;
 
-Appareils de reprographie de bureautique utilisant la technique du scanner.
+Appareils de reprographie de bureautique utilisant la technique du scanner ;
+
+Imprimantes, machines à copier et machines à télécopier, même combinées entre elles.
+
+**Nota:**
+
+En conséquence de la loi n° 2018-1317 du 28 décembre 2018, art. 26-III-25°, cet article devient sans objet.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1993-03-16 art. 1 JORF 26 mars 1993
-
-_Codifié par_:
-
-  - Arrêté 1993-09-24
+  - Arrêté 2007-01-01 art. 1 JORF 2 janvier 2007
+  - Arrêté du 6 juin 2019 - art. 1
 
 **Liens**:
 
-  - HISTO: Edition du 18 août 1993
+  - PERIME: Arrêté du 6 juin 2019 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, CGI. - art. 1609 terdecies
