--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 002 - 6300198.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 002 - 6300198.md
@@ -44,7 +44,7 @@ i. turbine à condensation pour la production d'électricité dans le cas où la
 l'incinération de déchets industriels ou ménagers ou par récupération sur un procédé de fabrication excédentaire en énergie ;
 
 2° Matériel de cogénération permettant la production simultanée, dans un seul processus, d'énergie thermique et électrique
-et/ou mécanique :
+et / ou mécanique :
 
 a. turbine de détente de vapeur en contre-pression ;
 
@@ -53,7 +53,7 @@ b. turbine de détente de fluides utilisés dans des cycles binaires de producti
 
 c. turbine de détente de haute pression utilisée en place de vanne de laminage ou de détente ;
 
-d. turbine à gaz et moteur thermique avec équipements de récupération de l'énergie sur les gaz d'échappement et/ou les
+d. turbine à gaz et moteur thermique avec équipements de récupération de l'énergie sur les gaz d'échappement et / ou les
 fluides de refroidissement ;
 
 3° Matériel permettant la transformation en énergie électrique ou en énergie mécanique de l'énergie cinétique des turbines
@@ -73,8 +73,7 @@ c. matériel permettant une chauffe en surface ou dans la masse en remplacement 
 infrarouge (gaz ou électricité), à haute fréquence, par rayonnement ultraviolet, micro-ondes ;
 
 d. matériel de mesure ou enregistreurs permettant un meilleur contrôle du rendement énergétique des installations, à
-l'exception des appareils de contrôle prévus par les articles 7 et 8 du décret n° 98-817 du 11 septembre 1998 relatif aux
-rendements minimaux et à l'équipement des chaudières de puissance comprise entre 400 kW et 50 MW ;
+l'exception des appareils de contrôle prévus par les articles R. 224-26 et R. 224-27 du code de l'environnement ;
 
 e. matériel de séparation performant en substitution d'un système de séparation par voies thermiques : membranes polymères,
 membranes minérales, membranes cryogéniques ;
@@ -142,7 +141,7 @@ réseaux électriques ;
 
 5. matériels utilisant un procédé à haut rendement énergétique pour le chauffage et le conditionnement des bâtiments :
 
-a. systèmes de climatisation réversible dont le coefficient de performance, à + 7 °C, est supérieur ou égal à 3 ;
+a. systèmes de climatisation réversible dont le coefficient de performance, à + 7° C, est supérieur ou égal à 3 ;
 
 b. chaudière à condensation ;
 
@@ -152,28 +151,36 @@ ventilation ;
 d. matériel de chauffage permettant de favoriser les concentrations énergétiques dans des espaces limités en remplacement
 d'un chauffage classique : générateurs d'air chaud, aérothermes directs, générateurs de ventilation tempérée ;
 
-e. système de pompes à chaleur géothermale ou air/eau dont le coefficient de performance machine en mode chauffage est
+e. système de pompes à chaleur géothermale ou air / eau dont le coefficient de performance machine en mode chauffage est
 supérieur ou égal à 3 ;
 
-f. système d'optimisation énergétique en fonction des programmes de production et/ou des données climatiques ;
+f. système d'optimisation énergétique en fonction des programmes de production et / ou des données climatiques ;
 
 g. matériaux d'isolation thermique des parois opaques :
 
 - plancher bas sur sous-sol, sur vide sanitaire ou sur passage ouvert, toiture-terrasse, mur en façade ou en pignon,
-possédant une résistance supérieure ou égale à 2,4 mètres carrés kelvin par watt (m2 K/W) ;
+possédant une résistance supérieure ou égale à 2,4 mètres carrés kelvin par watt (m2 K / W) ;
 
-- toiture sur comble possédant une résistance thermique supérieure ou égale à 4,5 m2 K/W ;
+- toiture sur comble possédant une résistance thermique supérieure ou égale à 4,5 m2 K / W ;
 
 h. système de ventilation mécanique contrôlée dont l'efficacité de la récupération d'énergie de l'échangeur est supérieure à
-65 % sur l'air humide et dont la puissance par ventilateur est inférieure à 0,30 W/m3/h, soit 0,70 W/m3/h pour la centrale
-double flux.
+65 % sur l'air humide et dont la puissance par ventilateur est inférieure à 0,30 W / m3 / h, soit 0,70 W / m3 / h pour la
+centrale double flux.
+
+**Nota:**
+
+Modification effectuée en conséquence des articles 1er, 2 et 4-45 du décret n° 2007-397 du 27 mars 2007.
 
 **Liens relatifs à cet article**
 
+_Cite_:
+
+  - Loi n°80-531 du 15 juillet 1980 (V)
+  - Code général des impôts, CGI. - art. 39 AA
+  - Code général des impôts, CGI. - art. 39 AB
+  - Code de l'environnement - art. R224-26
+  - Code de l'environnement - art. R224-27 (V)
+
 _Modifié par_:
 
-  - Arrêté 2005-12-27 art. 1 JORF 31 décembre 2005
-
-**Liens**:
-
-  - HISTO: Edition du 1er janvier 2006
+  - Arrêté du 1er avril 2008 - art. 1
