--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 002 - 6300198.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 002 - 6300198.md
@@ -1,11 +1,11 @@
 # Article 02
 
-I.-Pour bénéficier de l'amortissement dégressif accéléré mentionné au 2° de l'article 39 AA du code général des impôts ou de
-l'amortissement exceptionnel mentionné à l'article 39 AB du même code, les matériels destinés à économiser l'énergie et les
-équipements de production d'énergies renouvelables mentionnés sur la liste donnée au 2 doivent pouvoir être séparés des
+I. – Pour bénéficier de l'amortissement dégressif accéléré mentionné au 2° de l'article 39 AA du code général des impôts ou
+de l'amortissement exceptionnel mentionné à l'article 39 AB du même code, les matériels destinés à économiser l'énergie et
+les équipements de production d'énergies renouvelables mentionnés sur la liste donnée au 2 doivent pouvoir être séparés des
 appareils auxquels ils ont été adjoints sans être rendus définitivement inutilisables.
 
-II.-La liste des matériels est fixée ainsi qu'il suit :
+II. – La liste des matériels est fixée ainsi qu'il suit :
 
 1. Matériels de récupération de force ou de chaleur produite par l'emploi d'hydrocarbures liquides ou gazeux, de combustibles
 minéraux solides ou d'électricité :
@@ -44,7 +44,7 @@ i. turbine à condensation pour la production d'électricité dans le cas où la
 l'incinération de déchets industriels ou ménagers ou par récupération sur un procédé de fabrication excédentaire en énergie ;
 
 2° Matériel de cogénération permettant la production simultanée, dans un seul processus, d'énergie thermique et électrique
-et / ou mécanique :
+et/ ou mécanique :
 
 a. turbine de détente de vapeur en contre-pression ;
 
@@ -53,7 +53,7 @@ b. turbine de détente de fluides utilisés dans des cycles binaires de producti
 
 c. turbine de détente de haute pression utilisée en place de vanne de laminage ou de détente ;
 
-d. turbine à gaz et moteur thermique avec équipements de récupération de l'énergie sur les gaz d'échappement et / ou les
+d. turbine à gaz et moteur thermique avec équipements de récupération de l'énergie sur les gaz d'échappement et/ ou les
 fluides de refroidissement ;
 
 3° Matériel permettant la transformation en énergie électrique ou en énergie mécanique de l'énergie cinétique des turbines
@@ -117,8 +117,9 @@ d. réseaux de récupération et collecte de biogaz en vue de son utilisation é
 
 e. matériel permettant l'utilisation de l'énergie marémotrice, houlomotrice et thermique des mers et son stockage ;
 
-f. matériel de raccordement à un réseau de chaleur classé au sens de la loi n° 80-531 du 15 juillet 1980 modifiée relative
-aux économies d'énergie et à l'utilisation de la chaleur ;
+f. matériel de raccordement à un réseau de chaleur classé au sens des deuxième et troisième alinéas de l'article 5 de la loi
+n° 80-531 du 15 juillet 1980 modifiée relative aux économies d'énergie et à l'utilisation de la chaleur et du chapitre II du
+titre Ier du livre VII du code de l'énergie ;
 
 g. matériel de raccordement à un réseau de chaleur utilisant majoritairement de l'énergie géothermale ;
 
@@ -151,36 +152,39 @@ ventilation ;
 d. matériel de chauffage permettant de favoriser les concentrations énergétiques dans des espaces limités en remplacement
 d'un chauffage classique : générateurs d'air chaud, aérothermes directs, générateurs de ventilation tempérée ;
 
-e. système de pompes à chaleur géothermale ou air / eau dont le coefficient de performance machine en mode chauffage est
+e. système de pompes à chaleur géothermale ou air/ eau dont le coefficient de performance machine en mode chauffage est
 supérieur ou égal à 3 ;
 
-f. système d'optimisation énergétique en fonction des programmes de production et / ou des données climatiques ;
+f. système d'optimisation énergétique en fonction des programmes de production et/ ou des données climatiques ;
 
 g. matériaux d'isolation thermique des parois opaques :
 
-- plancher bas sur sous-sol, sur vide sanitaire ou sur passage ouvert, toiture-terrasse, mur en façade ou en pignon,
-possédant une résistance supérieure ou égale à 2,4 mètres carrés kelvin par watt (m2 K / W) ;
+– plancher bas sur sous-sol, sur vide sanitaire ou sur passage ouvert, toiture-terrasse, mur en façade ou en pignon,
+possédant une résistance supérieure ou égale à 2,4 mètres carrés kelvin par watt (m
+  <sup>2</sup> K/W) ;
 
-- toiture sur comble possédant une résistance thermique supérieure ou égale à 4,5 m2 K / W ;
+– toiture sur comble possédant une résistance thermique supérieure ou égale à 4,5 m
+  <sup>2</sup> K/W ;
 
 h. système de ventilation mécanique contrôlée dont l'efficacité de la récupération d'énergie de l'échangeur est supérieure à
-65 % sur l'air humide et dont la puissance par ventilateur est inférieure à 0,30 W / m3 / h, soit 0,70 W / m3 / h pour la
-centrale double flux.
+65 % sur l'air humide et dont la puissance par ventilateur est inférieure à 0,30 W/m
+  <sup>3</sup>/h, soit 0,70 W/m
+  <sup>3</sup>/h pour la centrale double flux.
 
 **Nota:**
 
-Modification effectuée en conséquence des articles 1er, 2 et 4-45 du décret n° 2007-397 du 27 mars 2007.
+Modification effectuée en conséquence des art. 1er, 2, 4 [16°], 6 [4° a] et 14 de l'ordonnance n° 2011-504 du 9 mai 2011.
 
 **Liens relatifs à cet article**
 
 _Cite_:
 
-  - Loi n°80-531 du 15 juillet 1980 (V)
+  - Loi n°80-531 du 15 juillet 1980 - art. 5 (V)
   - Code général des impôts, CGI. - art. 39 AA
   - Code général des impôts, CGI. - art. 39 AB
   - Code de l'environnement - art. R224-26
-  - Code de l'environnement - art. R224-27 (V)
+  - Code de l'environnement - art. R224-27
 
 _Modifié par_:
 
-  - Arrêté du 1er avril 2008 - art. 1
+  - Arrêté du 3 juin 2013 - art. 1
