--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 167 - 6301909.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 167 - 6301909.md
@@ -1,66 +1,67 @@
 # Article 167
 
-1. Sont notamment soumis au régime prévu au 1 de l'article 165 : 
+1. Sont notamment soumis au régime prévu au 1 de l'article 165 :
 
-voies navigables de France ; 
+Voies navigables de France ;
 
-la caisse nationale du crédit agricole ; 
+la caisse nationale du crédit agricole ;
 
-les      chambres de commerce et d'industrie territoriales et ports autonomes ; 
+les chambres de commerce et d'industrie territoriales et ports autonomes ;
 
-le comité national interprofessionnel des viandes ; 
+le comité national interprofessionnel des viandes ;
 
-l'entreprise de recherches et d'activités pétrolières (ERAP) ; 
+l'Entreprise de recherches et d'activités pétrolières (ERAP) ;
 
-l'entreprise minière et chimique ; 
+(l'entreprise minière et chimique) (1) ;
 
-les régies municipales, intercommunales et départementales exploitant des services à caractère industriel et commercial. 
+les régies municipales, intercommunales et départementales exploitant des services à caractère industriel et commercial.
 
-2. Sont notamment soumis au régime prévu au 2 de l'article 165 : 
+2. Sont notamment soumis au régime prévu au 2 de l'article 165 :
 
-les manufactures nationales ; 
+les manufactures nationales ;
 
-La Monnaie de Paris ; 
+La Monnaie de Paris ;
 
-les arsenaux, poudreries et usines mécaniques de l'Etat. 
+les arsenaux, poudreries et usines mécaniques de l'Etat.
 
-3. Sont notamment soumis au régime prévu au 1 de l'article 166 : 
+3. Sont notamment soumis au régime prévu au 1 de l'article 166 :
 
-l'établissement national des invalides de la marine ; 
+l'établissement national des invalides de la marine ;
 
-la caisse des retraites des inscrits maritimes ; 
+la caisse des retraites des inscrits maritimes ;
 
-la caisse des retraites des agents du service général ; 
+la caisse des retraites des agents du service général ;
 
-la caisse de prévoyance des marins français ; 
+la caisse de prévoyance des marins français ;
 
-la caisse générale de garantie des assurances sociales ; 
+la caisse générale de garantie des assurances sociales ;
 
-la caisse de retraite des ouvriers mineurs ; 
+la caisse de retraite des ouvriers mineurs ;
 
-la caisse de compensation pour la décentralisation de l'industrie aéronautique ; 
+la caisse de compensation pour la décentralisation de l'industrie aéronautique ;
 
-les chambres d'agriculture ; 
+les chambres d'agriculture ;
 
-les chambres de métiers et de l'artisanat de région ; 
+les chambres de métiers et de l'artisanat de région ;
 
-les sections de l'office de répartition des produits industriels ; 
+les sections de l'office de répartition des produits industriels ;
 
-l'établissement national des produits de l'agriculture et de la mer (FranceAgriMer) ; 
+l'établissement national des produits de l'agriculture et de la mer (FranceAgriMer) ;
 
 l'office national des anciens combattants et victimes de guerre.
 
 **Nota:**
 
-Modifications effectuées en conséquence de l'article 36-II B de la loi n° 2006-1666 du 21 décembre 2006, des articles 10-I et
-11 du décret n° 2009-340 du 27 mars 2009 et de l'article 87-1° du décret n° 2010-1463 du 1er décembre 2010.
+(1) Sans objet.
+
+Modification effectuée en conséquence du décret n° 2005-1559 du 14 décembre 2005 et de l'art. 1
+  <sup>er</sup> de l'arrêté du 28 décembre 2012.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2010-1463 du 1er décembre 2010 - art. 87 (V)
-  - Arrêté du 9 juin 2011 - art. 1
+  - Arrêté du 3 juin 2013 - art. 1
 
 _Cite_:
 
