--- a/02. Livre II : Recouvrement de l'impôt/Article 217 - 27520610.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 217 - 27520610.md
@@ -1,6 +1,6 @@
 # Article 217
 
-I. – Un agent délégataire relevant de la direction générale des finances publiques ne peut statuer :
+I.-Un agent délégataire relevant de la direction générale des finances publiques ne peut statuer :
 
 a) Sur une demande pour laquelle les services de direction ou ceux de l'administration centrale doivent être consultés ou
 sont déjà saisis ;
@@ -17,11 +17,11 @@ il a apposé son visa ;
 
 e) Sur une demande contentieuse qui porte sur une imposition faisant suite à une procédure de contrôle dont il a eu à
 connaître dans le cadre d'un recours hiérarchique, de premier ou de deuxième niveau, ou en visant le rapport à la commission
-départementale des impôts directs et des taxes sur le chiffre d'affaires, à la Commission nationale des impôts directs et des
-taxes sur le chiffre d'affaires ou à la commission départementale de conciliation, prévues respectivement aux articles 1651,
-1651 H et 1653 A du code général des impôts.
+des impôts directs et des taxes sur le chiffre d'affaires, à la Commission nationale des impôts directs et des taxes sur le
+chiffre d'affaires ou à la commission départementale de conciliation, prévues respectivement aux articles 1651, 1651 H et
+1653 A du code général des impôts.
 
-II. – Un agent délégataire relevant de la direction générale des douanes et droits indirects ne peut statuer :
+II.-Un agent délégataire relevant de la direction générale des douanes et droits indirects ne peut statuer :
 
 a) Sur une demande pour laquelle les services de direction ou ceux de l'administration centrale doivent être consultés ou
 sont déjà saisis ;
@@ -35,12 +35,10 @@ dans le cas où il exerce lui-même les fonctions de responsable dudit service.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 30 mai 2013 - art. 1
+  - Arrêté du 1er juin 2017 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 1651 (VT)
-  - Code général des impôts, CGI. - art. 1651 H (V)
-  - Code général des impôts, CGI. - art. 1653 A (V)
+  - Code général des impôts, CGI. - art. 1651
