--- a/02. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 C - 6301960.md
@@ -1,18 +1,18 @@
 # Article 188 C
 
 Les personnes morales visées à l'article 108 du code général des impôts versent l'impôt afférent aux intérêts de bons de
-caisse à la recette des impôts de la direction des résidents à l'étranger et des services généraux.
+caisse à la recette des impôts de la          direction des impôts des non-résidents.
 
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Arrêté 2000-07-24 art. 10 JORF 25 juillet 2000
 
 _Codifié par_:
 
   - Arrêté 2005-04-06
 
+_Modifié par_:
+
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 108 (V)
+  - Code général des impôts, CGI. - art. 108
