--- a/02. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 I - 6302018.md
@@ -3,8 +3,8 @@
 Le prélèvement opéré par les agences et succursales des établissements de crédit par les caisses publiques et par les caisses
 d'épargne peut faire l'objet de versements globaux dans les conditions prévues à l'article 188 H. 
 
-La déclaration préalable qui doit être adressée à la direction des résidents à l'étranger et des services généraux peut viser
-à la fois le versement de la retenue à la source prévue audit article et celui du prélèvement. 
+La déclaration préalable qui doit être adressée à la          direction des impôts des non-résidents peut viser à la fois le
+versement de la retenue à la source prévue audit article et celui du prélèvement. 
 
 Ces dispositions ne sont pas applicables au prélèvement dû à raison des revenus, produits et gains mentionnés à l'article 125
 D du code général des impôts.
@@ -13,7 +13,7 @@ D du code général des impôts.
 
 _Modifié par_:
 
-  - Arrêté 2006-04-14 art. 1 JORF 16 avril 2006
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
 
 _Cité par_:
 
@@ -21,5 +21,5 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, annexe 4, CGIAN4. - art. 188 H (V)
-  - Code général des impôts, CGI. - art. 125 D (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 188 H
+  - Code général des impôts, CGI. - art. 125 D
