--- a/02. Livre II : Recouvrement de l'impôt/Article 188 J - 6301973.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 J - 6301973.md
@@ -1,8 +1,8 @@
 # Article 188 J
 
 Le service des impôts compétent pour recouvrer l'impôt mentionné à l'article 381 K de l'annexe III au code général des impôts
-est la recette de la direction des résidents à l'étranger et des services généraux, quel que soit le lieu de situation de la
-collectivité émettrice.
+est la recette de la          direction des impôts des non-résidents, quel que soit le lieu de situation de la collectivité
+émettrice.
 
 **Liens relatifs à cet article**
 
@@ -12,8 +12,8 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2005-1720 du 30 décembre 2005 - art. 103 () JORF 31 décembre 2005
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
 
 _Cite_:
 
-  - Code général des impôts, annexe 3, CGIAN3. - art. 381 K (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 381 K
