--- a/02. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188-0 I - 6301969.md
@@ -1,15 +1,15 @@
 # Article 188-0 I
 
 I. – Le prélèvement sur les produits de placements à revenu fixe prévu à l'article 125 A du code général des impôts est versé
-à la recette des impôts de la direction des résidents à l'étranger et des services généraux, lorsqu'il est dû à raison de
-revenus, produits et gains mentionnés aux articles 125-0 A et 125 A du code précité.
+à la recette des impôts de la          direction des impôts des non-résidents, lorsqu'il est dû à raison de revenus, produits
+et gains mentionnés aux articles 125-0 A et 125 A du code précité. 
 
 II. – Le prélèvement mentionné au I dû à raison des revenus, produits et gains visés aux I et II de l'article 125 D du code
-général des impôts est versé :
+général des impôts est versé : 
 
-1° A la recette des impôts des non-résidents de la direction des résidents à l'étranger et des services généraux, lorsqu'il
-est acquitté par la personne qui assure le paiement desdits revenus, produits et gains et qu'elle est mandatée à cet effet
-par le contribuable ;
+1° A la recette des impôts des non-résidents de la          direction des impôts des non-résidents, lorsqu'il est acquitté
+par la personne qui assure le paiement desdits revenus, produits et gains et qu'elle est mandatée à cet effet par le
+contribuable ; 
 
 2° Au service des impôts du domicile du contribuable, lorsque ce dernier effectue lui-même le paiement dudit prélèvement.
 
@@ -21,10 +21,10 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Arrêté 2007-03-30 art. 1 JORF 31 mars 2007
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 125 A (V)
-  - Code général des impôts, CGI. - art. 125 D (V)
-  - Code général des impôts, CGI. - art. 125-0 A (V)
+  - Code général des impôts, CGI. - art. 125 A
+  - Code général des impôts, CGI. - art. 125 D
+  - Code général des impôts, CGI. - art. 125-0 A
