--- a/02. Livre II : Recouvrement de l'impôt/Article 188 H - 6302013.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 H - 6302013.md
@@ -3,27 +3,27 @@
 1. La retenue opérée par les agences ou succursales des établissements de crédit peut faire l'objet de versements globaux.
 Dans ce cas l'organisme centralisateur dresse et conserve pour chaque versement un état faisant apparaître le montant des
 sommes versées pour le compte de chacune des agences ou succursales. Les liasses visées au 3 de l'article 17 A sont
-conservées soit par l'organisme centralisateur soit par l'agence ou succursale.
+conservées soit par l'organisme centralisateur soit par l'agence ou succursale. 
 
-2. La possibilité d'effectuer des versements globaux est subordonnée au dépôt d'une déclaration à la direction des résidents
-à l'étranger et des services généraux. Cette déclaration, établie sur papier libre, est signée de la personne habilitée à
-engager l'établissement justifiant de son identité et de l'étendue de ses pouvoirs et contient la désignation de chacune des
-agences ou succursales pour le compte desquelles les versements seront effectués ainsi que du lieu où seront conservées les
-liasses visées au 1. Toute modification des indications qu'elle comporte fait l'objet d'une nouvelle déclaration souscrite
-dans les mêmes formes. Chaque déclaration prend effet dès le versement afférent au mois au cours duquel elle intervient.
+2. La possibilité d'effectuer des versements globaux est subordonnée au dépôt d'une déclaration à la          direction des
+impôts des non-résidents. Cette déclaration, établie sur papier libre, est signée de la personne habilitée à engager
+l'établissement justifiant de son identité et de l'étendue de ses pouvoirs et contient la désignation de chacune des agences
+ou succursales pour le compte desquelles les versements seront effectués ainsi que du lieu où seront conservées les liasses
+visées au 1. Toute modification des indications qu'elle comporte fait l'objet d'une nouvelle déclaration souscrite dans les
+mêmes formes. Chaque déclaration prend effet dès le versement afférent au mois au cours duquel elle intervient.
 
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Arrêté 2000-07-24 art. 10 JORF 25 juillet 2000
 
 _Codifié par_:
 
   - Arrêté 2005-04-06
 
+_Modifié par_:
+
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+
 _Cité par_:
 
-  - CODE GENERAL DES IMPOTS ANNEXE 4, CGIAN4. - art. 188 L (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 17 A (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 188 I (VD)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 188 L (VD)
