--- a/02. Livre II : Recouvrement de l'impôt/Article 188 K - 19493933.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 K - 19493933.md
@@ -2,9 +2,9 @@
 
 Le prélèvement prévu à l'article 117 quater du code général des impôts est versé : 
 
-1° A la recette des impôts des non-résidents de la direction des résidents à l'étranger et des services généraux, lorsqu'il
-est opéré par la personne mentionnée au II de l'article 117 quater précité ou par celle mentionnée au b du III du même
-article et mandatée par le contribuable à cet effet ; 
+1° A la recette des impôts des non-résidents de la          direction des impôts des non-résidents, lorsqu'il est opéré par
+la personne mentionnée au II de l'article 117 quater précité ou par celle mentionnée au b du III du même article et mandatée
+par le contribuable à cet effet ; 
 
 2° Par exception au 1°, au service des impôts auquel doit parvenir la déclaration de résultat de la personne mentionnée au II
 de l'article 117 quater précité ou, à défaut d'une telle déclaration, au service des impôts dont relève son siège social,
@@ -16,9 +16,9 @@ sécurité sociale ;
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 15 septembre 2008 - art. 1
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
 
 _Cite_:
 
