--- a/02. Livre II : Recouvrement de l'impôt/Article 188 L - 19493927.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188 L - 19493927.md
@@ -4,18 +4,18 @@ Le prélèvement prévu à l'article 117 quater du code général des impôts op
 établissements de crédit, par les caisses publiques et par les caisses d'épargne peut faire l'objet de versements globaux
 dans les conditions prévues à l'article 188 H. 
 
-La déclaration préalable qui doit être adressée à la direction des résidents à l'étranger et des services généraux peut viser
-à la fois le versement de la retenue prévue au 2 de l'article 119 bis du code général des impôts et celui des prélèvements
-mentionnés aux articles 125 A et 117 quater du même code. 
+La déclaration préalable qui doit être adressée à la          direction des impôts des non-résidents peut viser à la fois le
+versement de la retenue prévue au 2 de l'article 119 bis du code général des impôts et celui des prélèvements mentionnés aux
+articles 125 A et 117 quater du même code. 
 
 Ces dispositions ne sont pas applicables lorsque le prélèvement est acquitté dans les conditions du III de l'article 117
 quater précité.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 15 septembre 2008 - art. 1
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
 
 _Cité par_:
 
@@ -23,7 +23,7 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, annexe 4, CGIAN4. - art. 188 H
+  - Code général des impôts, annexe 4, CGIAN4. - art. 188 H (VD)
   - Code général des impôts, CGI. - art. 117 quater
   - Code général des impôts, CGI. - art. 119 bis
   - Code général des impôts, CGI. - art. 125 A
