--- a/02. Livre II : Recouvrement de l'impôt/Article 188-0 H - 6301967.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 188-0 H - 6301967.md
@@ -1,18 +1,18 @@
 # Article 188-0 H
 
 La retenue à la source prévue au 2 de l'article 119 bis du code général des impôts est versée à la recette des impôts de la
-direction des résidents à l'étranger et des services généraux.
+direction des impôts des non-résidents.
 
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Arrêté 2000-07-24 art. 10 JORF 25 juillet 2000
 
 _Codifié par_:
 
   - Arrêté 2005-04-06
 
+_Modifié par_:
+
+  - Décret n°2017-1197 du 26 juillet 2017 - art. 1 (VD)
+
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 119 bis (V)
+  - Code général des impôts, CGI. - art. 119 bis
